PRJ_VER=2.1.1
SUMMARY=zanata_xml generation script is fixed
REDHAT_BUGZILLA=1002279,1093336
[Changes]
- Fixed Bug 1093336 - date(1): -u is much portable than --utc
- Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj 
- cmake-fedora-newprj: Correct git repo URL