@@ -447,6 +447,7 @@ FUNCTION(ZANATA_PARSE_LOCALE language script country modifier suggestCountry sug
 	    SET(c "${x}")
 	ENDIF()
     ENDIF()
+    STRING(LENGTH "${l}" langLen)
 
     ## Known cases
     IF(l STREQUAL "zh")
@@ -461,6 +462,59 @@ FUNCTION(ZANATA_PARSE_LOCALE language script country modifier suggestCountry sug
 	ENDIF()
 	IF(s STREQUAL "Latn")
 	    SET(sM "latin")
+	ENDIF()
+    ELSEIF(l STREQUAL "aa")
+	IF(NOT c)
+	    SET(sC "ET")
+	ENDIF()
+    ELSEIF(l STREQUAL "ar")
+	IF(NOT c)
+	    SET(sC "SA")
+	ENDIF()
+    ELSEIF(l STREQUAL "ar")
+	IF(NOT c)
+	    SET(sC "SA")
+	ENDIF()
+    ELSEIF(l STREQUAL "ca")
+	IF(NOT c)
+	    SET(sC "AD")
+	ENDIF()
+    ELSEIF(l STREQUAL "el")
+	IF(NOT c)
+	    SET(sC "GR")
+	ENDIF()
+    ELSEIF(l STREQUAL "en")
+	IF(NOT c)
+	    SET(sC "US")
+	ENDIF()
+    ELSEIF(l STREQUAL "en")
+	IF(NOT c)
+	    SET(sC "US")
+	ENDIF()
+    ELSEIF(l STREQUAL "li")
+	IF(NOT c)
+	    SET(sC "NL")
+	ENDIF()
+    ELSEIF(l STREQUAL "om")
+	IF(NOT c)
+	    SET(sC "ET")
+	ENDIF()
+    ELSEIF(l STREQUAL "pa")
+	IF(NOT c)
+	    SET(sC "IN")
+	ENDIF()
+    ELSEIF(l STREQUAL "pa")
+	IF(NOT c)
+	    SET(sC "IN")
+	ENDIF()
+    ELSEIF(l STREQUAL "ti")
+	IF(NOT c)
+	    SET(sC "ET")
+	ENDIF()
+    ELSEIF(langLen EQUAL 2)
+	## Use uppercase language as country
+	IF(NOT c)
+	    STRING(TOUPPER "${l}" sC)
 	ENDIF()
     ENDIF()
 
@@ -486,6 +540,18 @@ FUNCTION(ZANATA_ZANATA_XML_DOWNLOAD zanataXml url project version)
 ENDFUNCTION(ZANATA_ZANATA_XML_DOWNLOAD)
 
 FUNCTION(ZANATA_ZANATA_XML_MAP_BETTER_MATCH var currentBestMatch serverLocale clientLocale)
+    IF(currentBestMatch STREQUAL serverLocale)
+	## Already found best match, no need to look further
+	SET(${var} "${currentBestMatch}" PARENT_SCOPE)
+	RETURN()
+    ENDIF()
+
+    IF(clientLocale STREQUAL serverLocale)
+	## Already found best match, no need to look further
+	SET(${var} "${clientLocale}" PARENT_SCOPE)
+	RETURN()
+    ENDIF()
+
     ZANATA_PARSE_LOCALE(sLang sScript sCountry sModifier sSCountry sSModifier "${serverLocale}")
     ZANATA_PARSE_LOCALE(cLang cScript cCountry cModifier cSCountry cSModifier "${clientLocale}") 
     M_MSG(${M_INFO3} "ZANATA_ZANATA_XML_MAP_BETTER_MATCH( ${currentBestMatch} ${serverLocale} ${clientLocale})")
@@ -544,6 +610,9 @@ FUNCTION(ZANATA_ZANATA_XML_MAP zanataXml zanataXmlIn clientLocales)
 	    FOREACH(cL ${clientLocales})
 		ZANATA_ZANATA_XML_MAP_BETTER_MATCH(bestMatch "${bestMatch}" "${sL}" "${cL}")
 		M_MSG(${M_INFO3} "bestMatch=${bestMatch} sL=${sL} cL=${cL}")
+		IF(bestMatch STREQUAL sL)
+		    BREAK()
+		ENDIF()
 	    ENDFOREACH()
 
 	    IF(bestMatch)
