@@ -5,3 +5,5 @@ REDHAT_BUGZILLA=1002279,1093336
 - Fixed Bug 1093336 - date(1): -u is much portable than --utc
 - Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj 
 - cmake-fedora-newprj: Correct git repo URL
+- ManageZanata: Fix zanata.xml suggest countries.
+ 
